--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,65 @@
+* {
+	box-sizing: border-box;
+}
 body {
 	background: yellow;
 }
 
-div {
-	width: 100px;
-	height: 100px;
+.container-fluid {
+	padding: 0;
+}
+
+.audience {
+	width: 100%;
+	height: 300px;
+	background: url(../imgs/audience.png) repeat center center;
+	background: cover;
+	display: inline-block;
+}
+
+.barrier {
+	width: 100%;
+	height: 115px;
+	background: #353232;
+}
+
+#player1, #player2 {
+	width: 200px;
+	height: 200px;
+}
+
+.road {
+
+	background-color: gray;
+	width: 100%;
+	height: 400px;
+}
+
+
+.line {
+	display: inline-block;
+	height: 20px;
+	width: 200px;
+	color: red;
 }
 
 #player1 {
-	background: green;
+	background: url(../imgs/fiat.png) no-repeat center center;
+	background-size: contain;
 }
 
 #player2 {
-	background: blue;
+	background: url(../imgs/mini.png) no-repeat center center;
+	background-size: contain;
 	position: absolute;
 	top: 200px;
 }
 
 #finish {
-	background: red;
+	width: 500px;
+	height: 500px;
+	background: url(../imgs/finishline.png) no-repeat center center;
+	background-size: contain;
 	position: absolute;
 	left: 800px;
 }
