--- a/css/main.css
+++ b/css/main.css
@@ -20,38 +20,51 @@ body {
 .barrier {
 	width: 100%;
 	height: 115px;
-	background: #353232;
-}
+	background: #353232 url(../imgs/sponsor1.png);
+	background-repeat: space;
+	background-size: contain;
 
-#player1, #player2 {
-	width: 200px;
-	height: 200px;
 }
 
 .road {
 
 	background-color: gray;
 	width: 100%;
-	height: 400px;
+	height: 310px;
+	position: relative;
+	z-index: -2;
 }
 
+.lines {
+	position: absolute;
+	top: 50%;
+	left: 20%;
+	z-index: -1;
+}
 
 .line {
 	display: inline-block;
-	height: 20px;
-	width: 200px;
-	color: red;
+	height: 15px;
+	width: 150px;
+	background: white;
+	margin-right: 60px;
+}
+
+.car {
+	width: 300px;
+	height: 250px;
+	position: absolute;
 }
 
 #player1 {
 	background: url(../imgs/fiat.png) no-repeat center center;
 	background-size: contain;
+	top: -50px;
 }
 
 #player2 {
 	background: url(../imgs/mini.png) no-repeat center center;
 	background-size: contain;
-	position: absolute;
 	top: 200px;
 }
 
