--- a/css/main.css
+++ b/css/main.css
@@ -32,47 +32,48 @@ body {
 	width: 100%;
 	height: 310px;
 	position: relative;
-	z-index: -2;
 }
 
 .lines {
+	width: 100%;
+	text-align: center;
 	position: absolute;
 	top: 50%;
-	left: 20%;
-	z-index: -1;
 }
 
 .line {
 	display: inline-block;
-	height: 15px;
-	width: 150px;
+	height: 10px;
+	width: 10%;
 	background: white;
 	margin-right: 60px;
 }
 
 .car {
-	width: 300px;
-	height: 250px;
 	position: absolute;
 }
 
 #player1 {
+	width: 250px;
+	height: 250px;
 	background: url(../imgs/fiat.png) no-repeat center center;
 	background-size: contain;
 	top: -50px;
 }
 
 #player2 {
+	width: 300px;
+	height: 250px;
 	background: url(../imgs/mini.png) no-repeat center center;
 	background-size: contain;
-	top: 200px;
+	top: 100px;
 }
 
 #finish {
-	width: 500px;
-	height: 500px;
-	background: url(../imgs/finishline.png) no-repeat center center;
-	background-size: contain;
+	width: 60px;
+	height: 100%;
+	background: url(../imgs/checkerboard.jpg) repeat center center;
+	background-size: initial;
 	position: absolute;
-	left: 800px;
+	left: 88%;
 }
